[gd_scene load_steps=25 format=2]

[ext_resource path="res://files/scenes/village/CraftPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/images/iconsitems/Wood.png" type="Texture" id=2]
[ext_resource path="res://assets/images/iconsgear/arron_weapon1_1.png" type="Texture" id=3]
[ext_resource path="res://assets/themes/button_round.tres" type="Theme" id=4]
[ext_resource path="res://assets/images/gui/forge/panel_forge_portrait_back.png" type="Texture" id=5]
[ext_resource path="res://assets/images/gui/forge/panel_forge_portrait.png" type="Texture" id=6]
[ext_resource path="res://assets/images/gui/forge/panel_forge_portrait_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/images/portrait/ArronNormal.png" type="Texture" id=8]
[ext_resource path="res://assets/images/gui/forge/panel_forge_portrait_hover.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/mainfont_32.tres" type="DynamicFont" id=10]
[ext_resource path="res://files/scenes/combat/ResistIcon.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/images/gui/forge/panel_forge_big.png" type="Texture" id=12]
[ext_resource path="res://assets/images/gui/forge/panel_forge_resources.png" type="Texture" id=14]
[ext_resource path="res://assets/images/gui/forge/panel_forge_gear.png" type="Texture" id=15]
[ext_resource path="res://assets/images/gui/forge/panel_forge_gear_disabled.png" type="Texture" id=16]
[ext_resource path="res://assets/images/gui/forge/panel_forge_gear_pressed.png" type="Texture" id=17]
[ext_resource path="res://files/scenes/GearTooltip.tscn" type="PackedScene" id=19]
[ext_resource path="res://files/scenes/village/forge_portrait.gd" type="Script" id=20]
[ext_resource path="res://assets/images/iconsitems/gold.png" type="Texture" id=21]
[ext_resource path="res://files/scenes/UnlockPanel.tscn" type="PackedScene" id=22]
[ext_resource path="res://assets/images/iconsgear/ember_weapon2_4.png" type="Texture" id=23]
[ext_resource path="res://assets/fonts/mainfont_bold_30.tres" type="DynamicFont" id=24]
[ext_resource path="res://assets/fonts/mainfont_20.tres" type="DynamicFont" id=25]
[ext_resource path="res://assets/fonts/mainfont_30_tight.tres" type="DynamicFont" id=26]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -718.0
margin_bottom = -58.0
script = ExtResource( 1 )

[node name="Panel" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -720.0
margin_bottom = -60.0
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 452.0
margin_top = 26.0
margin_right = 748.0
margin_bottom = 67.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 24 )
text = "BLACKSMITH"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
margin_left = 74.0
margin_top = 97.0
margin_right = -74.0
margin_bottom = 210.0
scroll_horizontal_enabled = false
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer"]
margin_left = 451.0
margin_right = 601.0
margin_bottom = 210.0
size_flags_horizontal = 6
custom_constants/separation = 30

[node name="panel" type="TextureButton" parent="Panel/ScrollContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 210.0
rect_min_size = Vector2( 150, 150 )
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )
script = ExtResource( 20 )

[node name="TextureRect2" type="TextureRect" parent="Panel/ScrollContainer/HBoxContainer/panel"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 6

[node name="TextureRect" type="TextureRect" parent="Panel/ScrollContainer/HBoxContainer/panel"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -15.0
margin_bottom = -15.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
text = "Arron"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon1" type="TextureButton" parent="Panel"]
margin_left = 92.0
margin_top = 400.0
margin_right = 352.0
margin_bottom = 927.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
size_flags_horizontal = 6
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )
texture_disabled = ExtResource( 16 )

[node name="Icon" type="TextureRect" parent="Panel/weapon1"]
margin_left = 0.729553
margin_top = 39.1892
margin_right = 250.73
margin_bottom = 289.189
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dam_type" parent="Panel/weapon1" instance=ExtResource( 11 )]
margin_left = 195.0
margin_top = 15.0
margin_right = 225.0
margin_bottom = 45.0

[node name="Button" type="Button" parent="Panel/weapon1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -111.5
margin_top = -56.0
margin_right = 111.5
theme = ExtResource( 4 )
text = "CRAFT"

[node name="Label" type="Label" parent="Panel/weapon1"]
anchor_right = 1.0
margin_top = 19.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 10 )
text = "Level 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/weapon1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -225.0
margin_right = -16.0
margin_bottom = -197.0
grow_vertical = 0
custom_fonts/font = ExtResource( 26 )
text = "Broad Sword"
align = 1
autowrap = true

[node name="UpdateText" type="NinePatchRect" parent="Panel/weapon1"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -109.0
margin_right = 89.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 100, 50 )
texture = ExtResource( 15 )
patch_margin_left = 25
patch_margin_top = 38
patch_margin_right = 29
patch_margin_bottom = 30

[node name="Label" type="Label" parent="Panel/weapon1/UpdateText"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 25.0
margin_right = -5.0
margin_bottom = -5.0
grow_vertical = 0
custom_fonts/font = ExtResource( 10 )
text = "UPGRADEBLACKSMITHREQUEST"
align = 1
valign = 2
autowrap = true
clip_text = true

[node name="ResPanel" type="TextureRect" parent="Panel/weapon1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -187.0
margin_right = 100.0
margin_bottom = -87.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="Panel/weapon1"]
margin_left = 31.0
margin_top = 340.0
margin_right = 230.0
margin_bottom = 440.0

[node name="button" type="TextureRect" parent="Panel/weapon1/VBoxContainer"]
margin_right = 199.0
margin_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3

[node name="icon" type="TextureRect" parent="Panel/weapon1/VBoxContainer/button"]
margin_top = 5.0
margin_right = 97.0
margin_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Panel/weapon1/VBoxContainer/button"]
margin_left = 5.0
margin_top = 75.0
margin_right = 90.0
margin_bottom = 95.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 25 )
text = "50/100"
align = 1

[node name="tooltip_sensor" type="Control" parent="Panel/weapon1"]
margin_right = 261.0
margin_bottom = 342.0
mouse_filter = 1

[node name="weapon2" type="TextureButton" parent="Panel"]
margin_left = 428.0
margin_top = 400.0
margin_right = 688.0
margin_bottom = 927.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
size_flags_horizontal = 6
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )
texture_disabled = ExtResource( 16 )

[node name="Icon" type="TextureRect" parent="Panel/weapon2"]
margin_left = 0.729553
margin_top = 39.1892
margin_right = 250.73
margin_bottom = 289.189
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 23 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dam_type" parent="Panel/weapon2" instance=ExtResource( 11 )]
margin_left = 195.0
margin_top = 15.0
margin_right = 225.0
margin_bottom = 45.0

[node name="Button" type="Button" parent="Panel/weapon2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -111.5
margin_top = -56.0
margin_right = 111.5
theme = ExtResource( 4 )
text = "CRAFT"

[node name="Label" type="Label" parent="Panel/weapon2"]
anchor_right = 1.0
margin_top = 19.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 10 )
text = "Level 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/weapon2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -225.0
margin_right = -16.0
margin_bottom = -197.0
grow_vertical = 0
custom_fonts/font = ExtResource( 26 )
text = "Gauntlets of Endurance"
align = 1
autowrap = true

[node name="UpdateText" type="NinePatchRect" parent="Panel/weapon2"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -109.0
margin_right = 89.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 100, 50 )
texture = ExtResource( 15 )
patch_margin_left = 25
patch_margin_top = 38
patch_margin_right = 29
patch_margin_bottom = 30

[node name="Label" type="Label" parent="Panel/weapon2/UpdateText"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 25.0
margin_right = -5.0
margin_bottom = -5.0
grow_vertical = 0
custom_fonts/font = ExtResource( 10 )
text = "UPGRADEBLACKSMITHREQUEST"
align = 1
valign = 2
autowrap = true
clip_text = true

[node name="ResPanel" type="TextureRect" parent="Panel/weapon2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -187.0
margin_right = 100.0
margin_bottom = -87.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="Panel/weapon2"]
margin_left = 31.0
margin_top = 340.0
margin_right = 230.0
margin_bottom = 440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="TextureRect" parent="Panel/weapon2/VBoxContainer"]
margin_right = 199.0
margin_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3

[node name="icon" type="TextureRect" parent="Panel/weapon2/VBoxContainer/button"]
margin_top = 5.0
margin_right = 97.0
margin_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/weapon2/VBoxContainer/button"]
margin_left = 5.0
margin_top = 75.0
margin_right = 90.0
margin_bottom = 95.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 25 )
text = "50/100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tooltip_sensor" type="Control" parent="Panel/weapon2"]
margin_right = 261.0
margin_bottom = 342.0
mouse_filter = 1

[node name="armor" type="TextureButton" parent="Panel"]
margin_left = 844.0
margin_top = 400.0
margin_right = 1104.0
margin_bottom = 927.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
size_flags_horizontal = 6
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )
texture_disabled = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Panel/armor"]
margin_left = 0.729553
margin_top = 39.1892
margin_right = 250.73
margin_bottom = 289.189
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/armor"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -111.5
margin_top = -56.0
margin_right = 111.5
theme = ExtResource( 4 )
text = "CRAFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/armor"]
anchor_right = 1.0
margin_top = 19.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 10 )
text = "Level 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/armor"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -225.0
margin_right = -16.0
margin_bottom = -197.0
grow_vertical = 0
custom_fonts/font = ExtResource( 26 )
text = "Broad Sword"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateText" type="NinePatchRect" parent="Panel/armor"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -109.0
margin_right = 89.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 100, 50 )
texture = ExtResource( 15 )
patch_margin_left = 25
patch_margin_top = 38
patch_margin_right = 29
patch_margin_bottom = 30

[node name="Label" type="Label" parent="Panel/armor/UpdateText"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 22.0
margin_right = -5.0
margin_bottom = -5.0
grow_vertical = 0
custom_fonts/font = ExtResource( 10 )
text = "UPGRADEBLACKSMITHREQUEST"
align = 1
valign = 2
autowrap = true
clip_text = true

[node name="ResPanel" type="TextureRect" parent="Panel/armor"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -187.0
margin_right = 100.0
margin_bottom = -87.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="Panel/armor"]
margin_left = 31.0
margin_top = 340.0
margin_right = 230.0
margin_bottom = 440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="TextureRect" parent="Panel/armor/VBoxContainer"]
margin_right = 199.0
margin_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3

[node name="icon" type="TextureRect" parent="Panel/armor/VBoxContainer/button"]
margin_top = 5.0
margin_right = 97.0
margin_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/armor/VBoxContainer/button"]
margin_left = 5.0
margin_top = 75.0
margin_right = 90.0
margin_bottom = 95.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 25 )
text = "50/100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tooltip_sensor" type="Control" parent="Panel/armor"]
margin_right = 261.0
margin_bottom = 342.0
mouse_filter = 1

[node name="goldicon" type="TextureRect" parent="Panel"]
margin_left = 1106.0
margin_top = 919.0
margin_right = 1178.0
margin_bottom = 989.0
hint_tooltip = "MONEYDESCRIPT"
texture = ExtResource( 21 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Panel/goldicon"]
margin_left = -65.0
margin_top = 25.0
margin_right = 6.0
margin_bottom = 60.0
grow_horizontal = 0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 24 )
text = "Gold"
align = 2

[node name="Tooltip" parent="." instance=ExtResource( 19 )]
visible = false
margin_left = 357.0
margin_top = 401.0
margin_right = 757.0
margin_bottom = 563.0

[node name="UnlockPanel" parent="." instance=ExtResource( 22 )]
visible = false
margin_left = 1295.0
margin_right = 1825.0
